test/integration/bad/reserved/sum_to_zero.stan
data {
  real sum_to_zero;
}
